# s2-geometry-library

./: .gitignore  travis.sh
geometry/: .project  CMakeLists.txt  s2.cc  s2edgeindex.cc  s2loop.cc  s2polygon.cc  s2regioncoverer.cc
geometry/base/: logging.h  port.h
geometry/python/: CMakeLists.txt  base.i
geometry/s2/: s2.h  s2loop.h  s2polygon.h  s2polygonbuilder.h
geometry/strings/: split.cc  strutil.cc  strutil.h
geometry/tests/: CMakeLists.txt  s2_test.cc  s2edgeindex_test.cc  s2loop_test.cc  s2polygon_test.cc
geometry/util/math/: mathutil.h
geometry/util/math/exactfloat/: exactfloat.cc  exactfloat.h
